--- a/components/sass/_nav.scss
+++ b/components/sass/_nav.scss
@@ -2,6 +2,7 @@
   overflow: hidden;
   background-color: #ffffff;
   text-align: right;
+  margin-top: 5%;
 
   a {
     display: inline-block;
@@ -92,6 +93,7 @@
   transform: translateY(-2em);
   z-index: -1;
   transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+  height: 220px;
 }
 
 .sub-menu-parent:hover .sub-menu {
@@ -190,6 +192,9 @@
   margin: 0 0 15px;
   padding: 0;
   width: 220px;
+  position: fixed;
+  top: 0;
+  z-index: 2;
 }
 
 
