--- a/css/style.css
+++ b/css/style.css
@@ -68,12 +68,12 @@ section {
 }
 @media (min-width: 801px) {
   .superhero {
-    height: 450px;
+    height: 550px;
   }
 }
 @media (max-width: 800px) {
   .superhero {
-    height: 650px;
+    height: 800px;
   }
 }
 @media (max-width: 300px) {
@@ -108,6 +108,33 @@ section {
 .superhero .everysuperhero a {
   color: #c81e19;
   text-decoration: underline;
+}
+.superhero .everysuperhero .top-sidekick {
+  margin-top: 20px;
+}
+.superhero .everysuperhero .top-sidekick img {
+  max-width: 91px;
+  width: 100%;
+  display: inline-block;
+  float: left;
+}
+.superhero .everysuperhero .top-sidekick .the-sidekick {
+  float: left;
+  display: inline-block;
+  padding-left: 15px;
+}
+.superhero .everysuperhero .top-sidekick .the-sidekick h3 {
+  margin: 0 0 10px 0;
+  font-size: 1.5em;
+  font-weight: 300;
+  color: #e12522;
+}
+.superhero .everysuperhero .top-sidekick .the-sidekick p {
+  color: #830a02;
+  font-weight: 400;
+}
+.superhero .everysuperhero .top-sidekick .the-sidekick a {
+  color: #830a02;
 }
 @media (max-width: 800px) {
   .superhero .everysuperhero {
@@ -335,6 +362,7 @@ section {
   overflow: hidden;
   background-color: #ffffff;
   text-align: right;
+  margin-top: 5%;
 }
 .topnav a {
   display: inline-block;
@@ -417,6 +445,7 @@ section {
   transform: translateY(-2em);
   z-index: -1;
   transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+  height: 220px;
 }
 
 .sub-menu-parent:hover .sub-menu {
@@ -511,4 +540,7 @@ section {
   margin: 0 0 15px;
   padding: 0;
   width: 220px;
+  position: fixed;
+  top: 0;
+  z-index: 2;
 }
